--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
             <input id="searchInput" type="text " class="form-control " placeholder="Search your phone">
             <button onclick="search()" class=" btn btn-outline-success " type="button " id="SearchButton ">Button</button>
         </div>
+
+    </header>
+    <main>
         <div class="container-fluid show-result">
             <div class="container">
-                <div class="row row-cols-4" id="Phone-container">
+                <div class="row row-cols-3" id="Phone-container">
 
                 </div>
 
             </div>
         </div>
-    </header>
+    </main>
 
 
 
