--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="input-group mb-3 ">
             <input id="searchInput" type="text " class="form-control " placeholder="Search your phone">
-            <button onclick="search()" class=" btn btn-outline-success " type="button " id="SearchButton ">Button</button>
+            <button onclick="search()" class=" btn btn-outline-primary " type="button " id="SearchButton ">Button</button>
         </div>
 
     </header>
