--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <div class="container-fluid show-result">
             <div class="container">
-                <div class="row row-cols-3" id="Phone-container">
+                <div class="row " id="Phone-container">
 
                 </div>
 
