--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         </div>
 
     </header>
+    <div class="spiner text-center" id="spiner">
+        <img class="align-item-center" src="/img/loading.gif" alt="">
+    </div>
     <main>
         <div class="container-fluid show-result">
             <div class="container">
